# claw0

./: .env.example  README.ja.md  README.md  README.zh.md  anthropic.py  pyproject.toml  requirements.txt
sessions/ja/: anthropic.py
sessions/zh/: s01_agent_loop.py  s02_tool_use.py  s03_sessions.py  s04_channels.py  s05_gateway_routing.py  s06_intelligence.py  s07_heartbeat_cron.py
test/: tangshi.txt
workspace/: AGENTS.md  BOOTSTRAP.md  CRON.json  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
workspace/.state/telegram/: offset-tg-primary.txt
workspace/skills/example-skill/: SKILL.md
