[project]
name = "claw0"
version = "0.1.0"
description = "claw0 sessions wired to OpenAI Codex OAuth."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "croniter>=2.0.0",
    "httpx>=0.27.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "websockets>=12.0",
]

[tool.uv]
package = false
